--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -55,25 +55,24 @@ nav ul li a {
             height: 100px;
             text-align: center;
 
-
             .facebook {
-                background: $facebook;
+                background: facebook;
             }
 
             .twitter {
-                background: $twitter;
+                background: twitter;
             }
 
             .instagram {
-                background: $instagram;
+                background: instagram;
             }
 
             .pinterest {
-                background: $pinterest;
+                background: pinterest;
             }
 
             .linkedin {
-                background: $linkedin;
+                background: linkedin;
             }
 
             a {
@@ -121,3 +120,4 @@ nav ul li a {
         }
     }
 }
+
