--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,11 +34,44 @@ $color in $redes {
 
 // Mixins
 
-@mixin size ($alto, $ancho, $margin) {
-    height: $alto;
-    width: $ancho;
-    margin: $margin;
+@mixin encabezados {
+    h1 {
+        font-size: 1.5em;
+    }
 
+    h2 {
+        font-size: 1.2em;
+    }
+
+    h3 {
+        font-size: 1em;
+    }
+}
+
+@mixin encabezados($tamaño) {
+    h1 {
+        font-size: $tamaño;
+    }
+
+    h2 {
+        font-size: $tamaño - 0.2;
+    }
+
+    h3 {
+        font-size: $tamaño - 0.5;
+    }
+}
+
+@include encabezados(2em);
+
+@include encabezados(1.5em);
+
+@media(min-width: 480px) {
+    @include encabezados(2em);
+}
+
+@media(min-width: 768px) {
+    @include encabezados(2.5em);
 }
 
 // Extend
