--- a/css/estilosscss.css
+++ b/css/estilosscss.css
@@ -51,6 +51,40 @@
   height: 100px;
   text-align: center; }
 
+h1 {
+  font-size: 2em; }
+
+h2 {
+  font-size: 1.8em; }
+
+h3 {
+  font-size: 1.5em; }
+
+h1 {
+  font-size: 1.5em; }
+
+h2 {
+  font-size: 1.3em; }
+
+h3 {
+  font-size: 1em; }
+
+@media (min-width: 480px) {
+  h1 {
+    font-size: 2em; }
+  h2 {
+    font-size: 1.8em; }
+  h3 {
+    font-size: 1.5em; } }
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 2.5em; }
+  h2 {
+    font-size: 2.3em; }
+  h3 {
+    font-size: 2em; } }
+
 .boton, .btn .btn-primary {
   text-align: center;
   background: #31384A;
