--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -56,7 +56,7 @@ nav ul li a {
             text-align: center;
 
             .facebook {
-                background: facebook;
+                background: $facebook;
             }
 
             .twitter {
