--- a/css/estilosscss.css
+++ b/css/estilosscss.css
@@ -94,13 +94,16 @@ h3 {
 .btn {
   padding: 1rem; }
   .btn .btn-primary {
-    background-color: #4225c4;
-    border-color: #4225c4; }
+    background-color: var(--primary);
+    border-color: var(--primary); }
 
 body {
   background: #63b060;
   font-family: 'Poppins', sans-serif;
   align-items: center; }
+
+.banner {
+  width: 100%; }
 
 /* NavBar */
 nav ul li a {
@@ -191,7 +194,8 @@ nav ul li a {
   max-width: 90%;
   margin: 1.6em;
   display: grid;
-  text-align: center; }
+  text-align: center;
+}
 
 form {
   margin: auto;
@@ -202,22 +206,29 @@ form {
   border-radius: 3px;
   font-size: 12px;
   box-sizing: border-box;
-  text-align: center; }
+  text-align: center;
+}
 
 .field {
   border: solid 1px #ccc;
   padding: 10px;
-  width: 200px; }
-  .field:focus {
-    border-color: #4f8c4d; }
+  width: 200px;
+}
+
+.field :focus {
+  border-color: #4f8c4d;
+}
 
 #boton {
   text-align: center;
   background: #31384A;
   color: #fff;
-  padding: 20px; }
-  #boton:hover {
-    cursor: pointer; }
+  padding: 20px;
+}
+
+#boton:hover {
+  cursor: pointer;
+}
 
 input,
 textarea {
@@ -226,11 +237,13 @@ textarea {
   padding: 7px;
   box-sizing: border-box;
   font-size: 17px;
-  border: none; }
-  input textarea,
-  textarea textarea {
-    min-height: 100px;
-    max-height: 200px; }
+  border: none;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 200px;
+}
 
 /* NOSOTROS */
 .nosotros {
@@ -333,82 +346,133 @@ aside img {
   justify-content: center;
   min-height: 100vh; }
 
-/* FOOTER */
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 30px;
+  background: #4f8c4d; }
+  .card .container_card {
+    width: calc(100%/2);
+    height: 85%;
+    border-radius: 35px;
+    transition: 400ms all ease;
+    box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75); }
+  .card .container_card:hover {
+    transform: translateY(-4%);
+    box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75); }
+  .card .container_card img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px; }
+  .card .subcontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 35px; }
+  .card .container_title {
+    width: 80%;
+    font-weight: bold;
+    margin-top: 0%;
+    font-size: 30px;
+    text-align: center;
+    line-height: normal; }
+  .card .container_subtitle {
+    width: 70%;
+    font-size: 50px;
+    font-weight: bold;
+    color: orange;
+    text-align: center;
+    line-height: 10%; }
+  .card .container_description {
+    margin-top: 10px;
+    width: 80%;
+    text-align: center;
+    font-size: 20px;
+    line-height: normal; }
+  .card .btn-secondary {
+    text-decoration: none;
+    margin-top: 10px;
+    padding: 15px;
+    padding-left: 70px;
+    padding-right: 70px;
+    font-weight: bold;
+    border-radius: 2em;
+    background-color: #3da91c; }
+  .card .btn-secondary:hover {
+    transform: translate(3%);
+    box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75); }
+
 .footer {
   display: grid;
   justify-items: center;
   background: #243624;
   color: #ffffffe4;
   margin: 0 auto; }
-
-.box {
-  padding: 5%; }
-
-.sociales {
-  display: flex;
-  height: 10vh;
-  align-items: center;
-  justify-content: center;
-  padding: 5%; }
-
-.sociales ul li {
-  display: inline-block;
-  margin: 0 5px;
-  width: 100px;
-  height: 100px;
-  text-align: center; }
-
-.sociales ul li a {
-  display: block;
-  padding: 0 10px;
-  background: rgba(35, 33, 33, 0.868);
-  color: #fff;
-  line-height: 50px;
-  font-size: 18px;
-  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
-  transition: .2s; }
-
-.sociales ul:hover a {
-  filter: blur(2px); }
-
-.sociales ul li a:hover {
-  transform: translateY(0.3px) scale(1.05);
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4);
-  filter: none; }
-
-.sociales ul li .facebook {
-  background: var(--facebook); }
-
-.sociales ul li .twitter {
-  background: var(--twitter); }
-
-.sociales ul li .instagram {
-  background: var(--instagram); }
-
-.sociales ul li .pinterest {
-  background: var(--pinterest); }
-
-.sociales ul li .linkedin {
-  background: var(--linkedin); }
-
-.map {
-  padding: 30px; }
-
-.btn-wsp {
-  position: fixed;
-  width: 55px;
-  height: 55px;
-  line-height: 55px;
-  background: white;
-  bottom: 30px;
-  right: 30px;
-  border-radius: 50px;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3); }
-
-.btn-wsp:hover {
-  text-decoration: none;
-  color: #0df053;
-  background: #fff; }
+  .footer .box {
+    padding: 5%; }
+  .footer .sociales {
+    display: flex;
+    height: 10vh;
+    align-items: center;
+    justify-content: center;
+    padding: 5%; }
+    .footer .sociales ul li {
+      display: inline-block;
+      margin: 0 5px;
+      width: 100px;
+      height: 100px;
+      text-align: center; }
+      .footer .sociales ul li .facebook {
+        background: #3b5999; }
+      .footer .sociales ul li .twitter {
+        background: #55acee; }
+      .footer .sociales ul li .instagram {
+        background: #e4405f; }
+      .footer .sociales ul li .pinterest {
+        background: #bd081c; }
+      .footer .sociales ul li .linkedin {
+        background: #0077B5; }
+      .footer .sociales ul li a {
+        display: block;
+        padding: 0 10px;
+        background: rgba(35, 33, 33, 0.868);
+        color: #fff;
+        line-height: 50px;
+        font-size: 18px;
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+        transition: .2s; }
+    .footer .sociales ul:hover a {
+      filter: blur(2px); }
+    .footer .sociales ul li a:hover {
+      transform: translateY(0.3px) scale(1.05);
+      box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4);
+      filter: none; }
+  .footer .map {
+    padding: 30px; }
+  .footer .btn-wsp {
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    background: white;
+    bottom: 30px;
+    right: 30px;
+    border-radius: 50px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3); }
+    .footer .btn-wsp:hover {
+      text-decoration: none;
+      color: #0df053;
+      background: #fff; }
 
 /* MEDIA QUERIES */
 @media screen and (min-width: 320px) {
