--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "hace-tu-pedido";
 @import "nosotros";
 @import "servicios";
+@import "viandas";
 
 //media queries
 @import "media-queries";
