--- a/css/estilosscss.css
+++ b/css/estilosscss.css
@@ -1,16 +1,4 @@
 @charset "UTF-8";
-.color-#63b060 {
-  background-color: #63b060; }
-
-.color-#4f8c4d {
-  background-color: #4f8c4d; }
-
-.color-#fa9b15 {
-  background-color: #fa9b15; }
-
-.color-#243624 {
-  background-color: #243624; }
-
 .red-facebook {
   color: #3b5999;
   display: inline-block;
@@ -52,15 +40,6 @@
   text-align: center; }
 
 h1 {
-  font-size: 2em; }
-
-h2 {
-  font-size: 1.8em; }
-
-h3 {
-  font-size: 1.5em; }
-
-h1 {
   font-size: 1.5em; }
 
 h2 {
@@ -68,22 +47,6 @@ h2 {
 
 h3 {
   font-size: 1em; }
-
-@media (min-width: 480px) {
-  h1 {
-    font-size: 2em; }
-  h2 {
-    font-size: 1.8em; }
-  h3 {
-    font-size: 1.5em; } }
-
-@media (min-width: 768px) {
-  h1 {
-    font-size: 2.5em; }
-  h2 {
-    font-size: 2.3em; }
-  h3 {
-    font-size: 2em; } }
 
 .boton, .btn .btn-primary {
   text-align: center;
@@ -119,6 +82,9 @@ nav ul li a {
   border: 5px #4f8c4d ridge; }
   nav ul li a:hover {
     color: #fa9b15; }
+  nav ul li a .btn-btn-primary {
+    background: orange;
+    background-color: #ea830d; }
 
 .active {
   background-color: #ea830d;
@@ -131,130 +97,120 @@ nav ul li a {
   background: #243624;
   color: #ffffffe4;
   margin: 0 auto; }
-  .footer .box {
-    padding: 5%; }
-  .footer .sociales {
-    display: flex;
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
-    padding: 5%; }
-    .footer .sociales ul li {
-      display: inline-block;
-      margin: 0 5px;
-      width: 100px;
-      height: 100px;
-      text-align: center; }
-      .footer .sociales ul li .facebook {
+
+.box {
+  padding: 2%; }
+  .box h2, .box p {
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic; }
+
+.sociales {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5%; }
+  .sociales ul li {
+    display: inline-block;
+    margin: 0 5px;
+    width: 100px;
+    text-align: center; }
+    .sociales ul li a {
+      display: block;
+      padding: 0 10px;
+      line-height: 100px;
+      font-size: 24px;
+      box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+      transition: .2s; }
+      .sociales ul li a .red-facebook {
         background: #3b5999; }
-      .footer .sociales ul li .twitter {
+      .sociales ul li a .red-twitter {
         background: #55acee; }
-      .footer .sociales ul li .instagram {
+      .sociales ul li a .red-instagram {
         background: #e4405f; }
-      .footer .sociales ul li .pinterest {
+      .sociales ul li a .red-pinterest {
         background: #bd081c; }
-      .footer .sociales ul li .linkedin {
+      .sociales ul li a .red-linkedin {
         background: #0077B5; }
-      .footer .sociales ul li a {
-        display: block;
-        padding: 0 10px;
-        background: rgba(35, 33, 33, 0.868);
-        color: #fff;
-        line-height: 50px;
-        font-size: 18px;
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
-        transition: .2s; }
-    .footer .sociales ul:hover a {
-      filter: blur(2px); }
-    .footer .sociales ul li a:hover {
-      transform: translateY(0.3px) scale(1.05);
-      box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4);
-      filter: none; }
-  .footer .map {
-    padding: 30px; }
-  .footer .btn-wsp {
-    position: fixed;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    background: white;
-    bottom: 30px;
-    right: 30px;
-    border-radius: 50px;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3); }
-    .footer .btn-wsp:hover {
-      text-decoration: none;
-      color: #0df053;
-      background: #fff; }
+  .sociales ul:hover a {
+    filter: blur(2px); }
+  .sociales ul li a:hover {
+    transform: translateY(0.3px) scale(1.05);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4);
+    filter: none; }
+
+.map {
+  padding: 20px; }
+
+.btn-wsp {
+  position: fixed;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  background: white;
+  bottom: 30px;
+  right: 30px;
+  border-radius: 50px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3); }
+  .btn-wsp:hover {
+    text-decoration: none;
+    color: #0df053;
+    background: #fff; }
 
 /* HACÉ TU PEDIDO */
-.pedidos h2 {
-  background: rgba(223, 131, 18, 0.925);
-  width: 100%;
-  max-width: 90%;
-  margin: 1.6em;
-  display: grid;
-  text-align: center;
-}
-
-form {
-  margin: auto;
-  width: 80%;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 10px 20px;
-  color: #999;
-  border-radius: 3px;
-  font-size: 12px;
-  box-sizing: border-box;
-  text-align: center;
-}
-
-.field {
-  border: solid 1px #ccc;
-  padding: 10px;
-  width: 200px;
-}
-
-.field :focus {
-  border-color: #4f8c4d;
-}
-
-#boton {
-  text-align: center;
-  background: #31384A;
-  color: #fff;
-  padding: 20px;
-}
-
-#boton:hover {
-  cursor: pointer;
-}
-
-input,
-textarea {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 7px;
-  box-sizing: border-box;
-  font-size: 17px;
-  border: none;
-}
-
-textarea {
-  min-height: 100px;
-  max-height: 200px;
-}
+.pedidos {
+  padding: 10px; }
+  .pedidos h2 {
+    background: rgba(223, 131, 18, 0.925);
+    width: 100%;
+    max-width: 90%;
+    margin: 1.6em;
+    display: grid;
+    text-align: center; }
+  .pedidos form {
+    margin: auto;
+    width: 80%;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+    color: #999;
+    border-radius: 3px;
+    font-size: 12px;
+    box-sizing: border-box;
+    text-align: center; }
+    .pedidos form .field {
+      border: solid 1px #ccc;
+      padding: 10px;
+      width: 200px; }
+    .pedidos form .field :focus {
+      border-color: #4f8c4d; }
+    .pedidos form label, .pedidos form input,
+    .pedidos form email number {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 7px;
+      box-sizing: border-box;
+      font-size: 17px;
+      border: none;
+      justify-content: center;
+      max-height: 200px; }
+    .pedidos form textarea {
+      min-height: 100px;
+      max-height: 200px; }
+    .pedidos form #boton {
+      text-align: center;
+      background: #31384A;
+      color: #fff;
+      padding: 20px;
+      width: 50%; }
+    .pedidos form #boton:hover {
+      cursor: pointer; }
 
 /* NOSOTROS */
 .nosotros {
   display: grid;
   gap: 10px;
   padding: 30px;
-  grid-template-areas: "encabezado"
- "header"
- "main"
- "sidebar"
- "footer"; }
+  grid-template-areas: "encabezado" "header" "main" "sidebar" "footer"; }
   .nosotros .sidebar {
     background: #ff7b00;
     text-align: center;
@@ -285,7 +241,6 @@ textarea {
   grid-area: footer; }
 
 .footer {
-  background: #4f8c4d;
   grid-column: span 3;
   height: auto;
   padding-top: 20px; }
@@ -412,70 +367,11 @@ aside img {
     -webkit-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 8px 10px 16px -16px rgba(0, 0, 0, 0.75); }
 
-.footer {
-  display: grid;
-  justify-items: center;
-  background: #243624;
-  color: #ffffffe4;
-  margin: 0 auto; }
-  .footer .box {
-    padding: 5%; }
-  .footer .sociales {
-    display: flex;
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
-    padding: 5%; }
-    .footer .sociales ul li {
-      display: inline-block;
-      margin: 0 5px;
-      width: 100px;
-      height: 100px;
-      text-align: center; }
-      .footer .sociales ul li .facebook {
-        background: #3b5999; }
-      .footer .sociales ul li .twitter {
-        background: #55acee; }
-      .footer .sociales ul li .instagram {
-        background: #e4405f; }
-      .footer .sociales ul li .pinterest {
-        background: #bd081c; }
-      .footer .sociales ul li .linkedin {
-        background: #0077B5; }
-      .footer .sociales ul li a {
-        display: block;
-        padding: 0 10px;
-        background: rgba(35, 33, 33, 0.868);
-        color: #fff;
-        line-height: 50px;
-        font-size: 18px;
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
-        transition: .2s; }
-    .footer .sociales ul:hover a {
-      filter: blur(2px); }
-    .footer .sociales ul li a:hover {
-      transform: translateY(0.3px) scale(1.05);
-      box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4);
-      filter: none; }
-  .footer .map {
-    padding: 30px; }
-  .footer .btn-wsp {
-    position: fixed;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    background: white;
-    bottom: 30px;
-    right: 30px;
-    border-radius: 50px;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3); }
-    .footer .btn-wsp:hover {
-      text-decoration: none;
-      color: #0df053;
-      background: #fff; }
-
 /* MEDIA QUERIES */
 @media screen and (min-width: 320px) {
+  .banner {
+    width: 100%;
+    justify-content: center; }
   .nosotros {
     display: flex;
     width: 100%;
@@ -486,25 +382,42 @@ aside img {
       display: block; }
   form {
     width: 100%; }
-  .title {
-    font-size: 30px;
-    padding-top: 0%;
-    color: #31384A;
-    text-decoration-style: dotted; }
-  .container-all img {
-    width: 100%; }
+  .container-all {
+    width: 100%;
+    align-items: center; }
+    .container-all .title {
+      font-size: 30px;
+      padding-top: 0%;
+      text-decoration-line: overline;
+      text-align: center; }
+      .container-all .title .img {
+        width: 100%;
+        align-items: center; }
+      .container-all .title .content-02 {
+        align-items: center;
+        width: 100%; }
   .nosotros .caja {
     grid-row: span 2;
     text-align: center;
     grid-template-rows: max-content; }
   .footer {
-    text-align: center; }
+    text-align: center;
+    width: 100%; }
     .footer .sociales {
       display: block;
       flex-direction: row-reverse;
       width: 100%; } }
 
 @media screen and (min-width: 480px) {
+  h1 {
+    font-size: 2em; }
+  h2 {
+    font-size: 1.8em; }
+  h3 {
+    font-size: 1.5em; }
+  .banner {
+    width: 100%;
+    justify-content: center; }
   .nosotros {
     display: flex;
     width: 100%;
@@ -513,27 +426,98 @@ aside img {
       width: 100%;
       text-align: center;
       display: block; }
+      .nosotros .caja .img {
+        justify-content: center; }
+        .nosotros .caja .img .sidebar {
+          justify-content: center;
+          width: 100%; }
+    .nosotros .subcontainer {
+      display: flex;
+      width: 100%;
+      flex-direction: row; }
   form {
     width: 100%; }
-  .title {
-    font-size: 30px;
-    padding-top: 0%;
-    color: #112b6c;
-    text-decoration-line: overline; }
-  .container-all img {
-    width: 100%; }
+  .container-all {
+    width: 100%;
+    align-items: center; }
+    .container-all .title {
+      font-size: 30px;
+      padding-top: 0%;
+      text-decoration-line: overline;
+      text-align: center; }
+      .container-all .title .img {
+        width: 100%;
+        align-items: center; }
   .nosotros .caja {
     grid-row: span 2;
     text-align: center;
     grid-template-rows: max-content; }
   .footer {
-    text-align: center; }
+    text-align: center;
+    width: 100%; }
   .sociales {
     display: block;
     flex-direction: row-reverse;
-    width: 100%; } }
+    width: 100%; }
+  .pedidos form textarea {
+    width: 100%; }
+  .subcontainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row; } }
 
 @media screen and (min-width: 768px) {
+  h1 {
+    font-size: 2.5em; }
+  h2 {
+    font-size: 2.3em; }
+  h3 {
+    font-size: 2em; }
+  .banner {
+    width: 100%;
+    justify-content: center; }
+  .nosotros {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    text-align: center; }
+    .nosotros .caja {
+      width: 100%;
+      text-align: center;
+      display: block; }
+      .nosotros .caja .img {
+        justify-content: center; }
+        .nosotros .caja .img .sidebar {
+          justify-content: center;
+          width: 100%; }
+  .footer {
+    text-align: center;
+    width: 100%; }
+  .container-all {
+    width: 100%; }
+    .container-all .title {
+      font-size: 30px;
+      padding-top: 0%;
+      text-decoration-line: overline;
+      text-align: center; }
+      .container-all .title .img {
+        width: 100%;
+        flex-direction: row; }
+  .subcontainer {
+    display: flex;
+    width: 100%;
+    flex-direction: column; } }
+
+@media screen and (min-width: 980px) {
+  h1 {
+    font-size: 2.5em; }
+  h2 {
+    font-size: 2.3em; }
+  h3 {
+    font-size: 2em; }
+  .banner {
+    width: 100%;
+    justify-content: center; }
   .nosotros {
     display: flex;
     width: 100%;
@@ -541,4 +525,25 @@ aside img {
     .nosotros .caja {
       width: 100%;
       text-align: center;
-      display: block; } }
+      display: block; }
+      .nosotros .caja .img {
+        justify-content: center; }
+        .nosotros .caja .img .sidebar {
+          justify-content: center;
+          width: 100%; }
+  .footer {
+    text-align: center;
+    width: 100%; }
+  .container-all {
+    width: 100%; }
+    .container-all .title {
+      font-size: 30px;
+      padding-top: 0%;
+      text-decoration-line: overline;
+      text-align: center; }
+      .container-all .title .img {
+        width: 100%; }
+  .subcontainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row; } }
