--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -24,6 +24,10 @@ nav ul li a {
     &:hover {
         color: rgb(250, 155, 21);
     }
+    .btn-btn-primary {
+        background: orange;
+        background-color: rgb(234, 131, 13);
+    }
 }
 
 .active {
@@ -38,57 +42,57 @@ nav ul li a {
     background: #243624;
     color: #ffffffe4;
     margin: 0 auto;
-
+}
 
     .box {
-        padding: 5%;
+        padding: 2%;
+
+        h2, p {
+            font-size: 15px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-style: italic;
+        }
     }
 
     .sociales {
         display: flex;
-        height: 10vh;
         align-items: center;
         justify-content: center;
         padding: 5%;
-
 
         ul li {
             display: inline-block;
             margin: 0 5px;
             width: 100px;
-            height: 100px;
             text-align: center;
-
-
-            .facebook {
-                background: #3b5999;
-            }
-
-            .twitter {
-                background: #55acee;
-            }
-
-            .instagram {
-                background: #e4405f;
-            }
-
-            .pinterest {
-                background: #bd081c;
-            }
-
-            .linkedin {
-                background: #0077B5;
-            }
 
             a {
                 display: block;
                 padding: 0 10px;
-                background: rgba(35, 33, 33, 0.868);
-                color: #fff;
-                line-height: 50px;
-                font-size: 18px;
+                line-height: 100px;
+                font-size: 24px;
                 box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
                 transition: .2s;
+
+                .red-facebook {
+                    background: #3b5999;;
+                }
+
+                .red-twitter {
+                    background: #55acee;
+                }
+
+                .red-instagram {
+                    background: #e4405f;
+                }
+
+                .red-pinterest {
+                    background: #bd081c;
+                }
+
+                .red-linkedin {
+                    background: #0077B5;
+                }
             }
         }
 
@@ -104,7 +108,7 @@ nav ul li a {
     }
 
     .map {
-        padding: 30px;
+        padding: 20px;
     }
 
     .btn-wsp {
@@ -124,5 +128,3 @@ nav ul li a {
             background: #fff;
         }
     }
-}
-
