--- a/css/estilosscss.css
+++ b/css/estilosscss.css
@@ -100,7 +100,8 @@ nav ul li a {
 
 .box {
   padding: 2%; }
-  .box h2, .box p {
+  .box h2,
+  .box p {
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic; }
@@ -115,23 +116,24 @@ nav ul li a {
     margin: 0 5px;
     width: 100px;
     text-align: center; }
+    .sociales ul li .red-facebook {
+      background: #3b5999; }
+    .sociales ul li .red-twitter {
+      background: #55acee; }
+    .sociales ul li .red-instagram {
+      background: #e4405f; }
+    .sociales ul li .red-pinterest {
+      background: #bd081c; }
+    .sociales ul li .red-linkedin {
+      background: #0077B5; }
     .sociales ul li a {
       display: block;
       padding: 0 10px;
       line-height: 100px;
+      color: #fff;
       font-size: 24px;
       box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
       transition: .2s; }
-      .sociales ul li a .red-facebook {
-        background: #3b5999; }
-      .sociales ul li a .red-twitter {
-        background: #55acee; }
-      .sociales ul li a .red-instagram {
-        background: #e4405f; }
-      .sociales ul li a .red-pinterest {
-        background: #bd081c; }
-      .sociales ul li a .red-linkedin {
-        background: #0077B5; }
   .sociales ul:hover a {
     filter: blur(2px); }
   .sociales ul li a:hover {
@@ -406,7 +408,8 @@ aside img {
     .footer .sociales {
       display: block;
       flex-direction: row-reverse;
-      width: 100%; } }
+      width: 100%;
+      padding: 10px; } }
 
 @media screen and (min-width: 480px) {
   h1 {
@@ -458,7 +461,8 @@ aside img {
   .sociales {
     display: block;
     flex-direction: row-reverse;
-    width: 100%; }
+    width: 100%;
+    padding: 10px; }
   .pedidos form textarea {
     width: 100%; }
   .subcontainer {
