--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -58,6 +58,7 @@
             display: block;
             flex-direction: row-reverse;
             width: 100%;
+            padding: 10px;
         }
     }
 }
@@ -133,6 +134,7 @@
         display: block;
         flex-direction: row-reverse;
         width: 100%;
+        padding: 10px;
     }
 
     .pedidos form textarea {
